; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/tui/extr_tui-disasm.c_tui_get_low_disassembly_address.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gdb/gdb/tui/extr_tui-disasm.c_tui_get_low_disassembly_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DISASSEM_WIN = common dso_local global i32 0, align 4
@DISASSEM_COMMAND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @tui_get_low_disassembly_address(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* @DISASSEM_WIN, align 4
  %7 = load i32, i32* @DISASSEM_COMMAND, align 4
  %8 = call i32 @tui_default_win_viewport_height(i32 %6, i32 %7)
  %9 = sdiv i32 %8, 2
  store i32 %9, i32* %5, align 4
  %10 = load i32, i32* %4, align 4
  %11 = load i32, i32* %5, align 4
  %12 = sub nsw i32 0, %11
  %13 = call i32 @tui_find_disassembly_address(i32 %10, i32 %12)
  store i32 %13, i32* %4, align 4
  %14 = load i32, i32* %4, align 4
  %15 = load i32, i32* %3, align 4
  %16 = icmp slt i32 %14, %15
  br i1 %16, label %17, label %19

17:                                               ; preds = %2
  %18 = load i32, i32* %3, align 4
  store i32 %18, i32* %4, align 4
  br label %19

19:                                               ; preds = %17, %2
  %20 = load i32, i32* %4, align 4
  ret i32 %20
}

declare dso_local i32 @tui_default_win_viewport_height(i32, i32) #1

declare dso_local i32 @tui_find_disassembly_address(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
